kubernetes/kubernetes-manifests/gateway/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: account-service
        protocol: HTTP
      hosts:
        - "account.dev"
    - port:
        number: 80
        name: product-service
        protocol: HTTP
      hosts:
        - "product.dev"
